<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_pink">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_burger"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trueno_bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="Burger"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image">
        </TextView>

        <LinearLayout
            android:id="@+id/layout_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/iv_plus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_plus">

            </ImageView>

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/trueno_bold"
                android:textSize="20sp">

            </TextView>

            <ImageView
                android:id="@+id/iv_minus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_minus">

            </ImageView>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trueno_reguler"
            android:textSize="20sp"
            android:textColor="@color/gray"
            android:text="Burger"
            android:gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_count">
        </TextView>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:inputType="textCapWords"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/lbl_name"
            android:fontFamily="@font/trueno_reguler"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toBottomOf="@+id/tv_description">
        </EditText>

        <EditText
            android:id="@+id/et_number"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="20dp"
            android:layout_marginHorizontal="30dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/lbl_number"
            android:fontFamily="@font/trueno_reguler"
            android:background="@drawable/edit_text_bg"
            app:layout_constraintTop_toBottomOf="@+id/et_name">

        </EditText>

        <TextView
            android:id="@+id/lbl_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trueno_reguler"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/txt_price"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_number">
        </TextView>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trueno_bold"
            android:textSize="30sp"
            android:textColor="@color/orange"
            android:text="$ 4"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_price">
        </TextView>

        <RelativeLayout
            android:id="@+id/button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/get_started_button_bg"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_price">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:fontFamily="@font/trueno_reguler"
                android:text="@string/txt_update_order">

            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/delete_button_bg"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_update">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:paddingVertical="10dp"
                android:textColor="@color/white"
                android:fontFamily="@font/trueno_reguler"
                android:text="@string/txt_delete_order">

            </TextView>

        </RelativeLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


  </androidx.core.widget.NestedScrollView>


</layout>