<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation="10dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_food"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_spalsh"
                android:scaleType="centerCrop">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:gravity="center|start">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/trueno_bold">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center|start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_order_number"
                        android:gravity="center_vertical"
                        android:textSize="13sp"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/trueno_bold">

                    </TextView>
                    <TextView
                        android:id="@+id/tv_order_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        android:textSize="15sp"
                        android:textColor="@color/yellow"
                        android:fontFamily="@font/trueno_bold">

                    </TextView>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center|start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_price"
                        android:gravity="center_vertical"
                        android:textSize="13sp"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/trueno_bold">

                    </TextView>
                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/trueno_bold">

                    </TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center|start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_quantity"
                        android:gravity="center_vertical"
                        android:textSize="13sp"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/trueno_bold">

                    </TextView>
                    <TextView
                        android:id="@+id/tv_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/trueno_bold">

                    </TextView>


                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>